assets/src/scss/pages/post/_author-block.scss
.author-block {
  overflow: hidden;
  background: $grey-10;
  padding: 24px 16px;
  border-radius: 4px;
  margin-bottom: 24px;

  @include medium-and-up {
    display: flex;
    padding: 24px;

    > .author-block-image {
      min-width: 200px;
      margin-inline-end: 32px;
      margin-top: 0;
    }
  }

  @include large-and-up {
    max-width: 776px;
  }

  @include x-large-and-up {
    max-width: 736px;
  }
}

.author-block-info-title {
  font-size: 20px;
  font-weight: bold;
  text-align: center;
  margin-bottom: 16px;
}

.author-block-image {
  width: 200px;
  height: 200px;
  margin: auto;

  img {
    width: 100%;
    border-radius: 50%;
    object-fit: cover;
  }
}

.author-block-info-name {
  font-size: 1.0625rem;
  font-weight: bold;
  margin: 16px 0;
  text-align: center;
}

.author-block-info-name,
.author-block-info-title {
  @include medium-and-up {
    text-align: inherit;
    margin: 8px 0;
  }
}

.author-block-info {
  font-size: $font-size-sm;
  line-height: 1.5;
  margin: 0;

  .collapsing {
    display: none;
    transition: none;
  }
}

.author-block-description-button {
  outline: none;
  border: none;
  padding: 0;
  display: block;
  color: $link-color;

  .show-less {
    display: none;
  }

  .show-more {
    display: inline-block;
  }

  &:after {
    content: "";
    background-image: url("../../images/blue-chevron.svg");
    display: inline-block;
    vertical-align: middle;
    margin-inline-start: 8px;
    width: 10px;
    height: 6px;
  }

  &[aria-expanded="true"] {
    .show-less {
      display: inline-block;
    }

    .show-more {
      display: none;
    }

    &:after {
      transform: rotate(180deg);
    }
  }

  &:hover {
    color: $link-color;

    span {
      text-decoration: underline;
    }
  }
}

